@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST ruby-ldap-0.9.12.gem 71680 SHA256 e1530586f9b528d6dd17a8cea49099c1b21d561f96490941cb6d0c9f42cb9798 SHA512 99aedf75fa8922481049a62616443899df7fce85b1b843a4f82b0fc992860f19bb3dba3836c0851e0a74a7c595fca7a044043400d01a064027147ec902b4c84d WHIRLPOOL a0ce15fceb5d42aed69b09b40eb7b0ab9eecfd3432431796a084b54d1eed720f856d5796bb87c68f5f6631c54519e09413b0bdb38ad304f257bc63b3836613f4
 DIST ruby-ldap-0.9.13.gem 63488 SHA256 9e382678b1f2f4cf36c7597889b00e667a5d27589ca5714ab02c106019b625c3 SHA512 637bd182d57b5405340a7dfef1c3a28e4b71037116626a550b9e731f524a253b3a3775673628d8dcc81e017e9ca1c844ed06bd0dfb00b455edc23acef01e2226 WHIRLPOOL c6307c38b3b9bba041aa9db1ba4d883ec5b5230bb04c20ffe2c62142b6cd145e4ea58468ddc9c91fdc77a34555358c9777b37f864b6efb030fa09b944721f74b
+DIST ruby-ldap-0.9.15.gem 65024 SHA256 a93cf09382ea523aa6557acdd1361d6ae3a721c740342c1c747251dce58895d6 SHA512 12b2b285952aa38f3b505c06e9df71f65c3d916b63c56a90858de5b24a8d12923c9f0330e0584ba6461026142f0bd23f58ab7203e73ff8b29636f5f742372ac0 WHIRLPOOL a901c13466e70528e52c97a916275973279e596527e8f87686962252b7ea2704a5ad4ab74514710300f039e9fa2b98368201d4d8cec9d617bb8cc8319101b3cc
 EBUILD ruby-ldap-0.9.12.ebuild 1256 SHA256 9921e758674d032661e41c6a9698ebb43ac34c845d1cb9fdfccc4078a60387c4 SHA512 ead6297a4edf890ff02d9e1c527b30d775e11d68b4dc355db0c9aa9df0e6411b7e56394319f2919092efbbf5823d2b23b5c58f430e36bdd943eedad8d7ccfb58 WHIRLPOOL a000d2fe4b624d9541458235f87cc82f7657270ddb7e203e7553d25a2ee0dccfed4a978b9d410373d1f6ad340fe547c393c874dd191f73f6f3ff0d0ca63d6a48
 EBUILD ruby-ldap-0.9.13.ebuild 1258 SHA256 150f1a9de31a84c84b645ce1572bcdaf3a222199733c49a8b2d339ec6237e67e SHA512 bf665e67dcf0893d5daa82054da1ac3660cc4242e9efcd63543254396d5fad547dee0be7b82cfe8874901e044fa3a3081c54e005bc82459df9b85d2eb8c223c8 WHIRLPOOL 73ec7d84d5fd40301f8f53a3a5e30b249802544756dbfcf5754d86f03cb32b0b5977744e02058edbc2afe3d0473d8f7c0fd19d2b6d2aa3c630cb8afff03ffc90
-MISC ChangeLog 7326 SHA256 fc950c4aefabd5fa054afa07074fcb72f3dd7bb4fdb7ebe684e5c46a4e149f98 SHA512 b082e71768cde68fe80be5dc84885097d03a7b25e1ac2b2ba8ffc59f52da69160af2d5eca13daa019854f28b98eef00fa5a67fa5fd347fc7561e2c4d5c6abd31 WHIRLPOOL 23534be4a5a75c5bc529ebd21bbb122526dcab4129dcd43ee2aa2460e73219c9ced34d59aa8e7d7547fdfadc22bbfcaaa4c7d41cc6aae148679eb9fd3b2d14ea
+EBUILD ruby-ldap-0.9.15.ebuild 1265 SHA256 5ec38802a9d6d093706910a9438abcd3063e5cc9d38e432769c6ad22a8ac361d SHA512 56b9d1b42b2c94090a9aa561a22b8563e5765bedc3991ea464792e4681d03c18eebc7122c83485064704fb04e31d6bae55f0b95b5593722884755a4022774ff6 WHIRLPOOL 407691a7a47484ee7a1632a4aed534426784d8edd61af714d611063accbc7ef473d60d00cec66b7119827ed06c4174a165d27d7efca3c829a9c677f6c22604be
+MISC ChangeLog 7452 SHA256 2baa9f3bbc65d8a8699253d5490d3ce8f388ef2c0c9b5fdff9c16a4ff3f7381e SHA512 e9577ab83429111355ec75ad4a733fa9c8cf71144d804076d27a30c83706ac4fe207aba7abd944367e9054bb42f8d2ec2afa05fe8864e6c9bda41ef9e4aced77 WHIRLPOOL 816a429fd1cb08d66e326cd78eac9607eabea207b10dc3b3d94d4a9a2c5c7113c38466c90238f750c61a06901e0e87e81cec7d387db99781052e3ce3c2606046
 MISC metadata.xml 243 SHA256 cc922e1de7b1bf8df81a0e39b32fccf91c733e945887202733d1b81841b6ae85 SHA512 ae5a8d6e1a86de842f170c6a1766543d3fafaab2205d802a30d7cd1cb1e9ced581418c7a497b31297e7eb016bd6d338c60a0df235a08b2f314a1c1083c6a4285 WHIRLPOOL 037a0830c921895664d043d261c7b4ed7fdf469d0b67c4f2669adcf265dd64e3bb965afb108fe2ef7ac0a3c01b7ffc40ec1546dc755dc458e0683040cff71791
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlGwIVsACgkQiIP6VqMIqNfYCQD+NxoBA/Vi1xdK2IllkuiYU9EF
-gLTuY+nOB5ksAsuoyYcA/jXtSrF8nmWthNzSl0mlDkBF4VcNRm+oU3um20AlRppL
-=aLNi
+iF4EAREIAAYFAlIpa0IACgkQiIP6VqMIqNdx9gD7BkGX2rCY43atx2ssJ0OyadAn
+5NTXR/3yxDnAwHHuTuYA/2gxyrEHCtx/TOTHMhOfCl2fXQ3929aCLPyyl2ESvQaB
+=XFNx
 -----END PGP SIGNATURE-----
