@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/ruby-ldap
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-ldap/ChangeLog,v 1.59 2013/06/06 05:42:50 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-ldap/ChangeLog,v 1.60 2013/09/06 05:42:20 graaff Exp $
+
+*ruby-ldap-0.9.15 (06 Sep 2013)
+
+  06 Sep 2013; Hans de Graaff <graaff@gentoo.org> +ruby-ldap-0.9.15.ebuild:
+  Version bump.
 
 *ruby-ldap-0.9.13 (06 Jun 2013)
 
